--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/tags.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/tags.css
@@ -1,6 +1,6 @@
 @Engin, Ehsan, Stella
 
-body[name="shsbody"]{
+body[id="shsbody"]{
 	background-color: #808080; /*dark gray*/	
 }
 
@@ -10,4 +10,20 @@ select,input[type="text"],input[type="password"]{
 
 legend{
 	color: #228B22;
+}
+
+td[id="controllboard_west_td"]{
+	width: 250px;
+	
+}
+
+div{
+	width: 100%;
+	/*height: 100%;*/
+	overflow: auto;
+}
+
+table{
+	width: 100%;
+	/*height: 100%;*/
 }
