--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
@@ -48,3 +48,14 @@ td.console{
 	border-bottom-right-radius: 10px 10px;
 	max-height:100px;
 }
+
+div.popup{
+	border: solid 2px;
+	border-top-left-radius: 10px 10px;
+	border-bottom-right-radius: 10px 10px;
+	position: relative;
+	display: none;
+	resize:both; 
+}
+
+
