--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
@@ -7,6 +7,7 @@
 .loginlabel{
 	display:block;
     font:14px/22px Arial, Helvetica, Sans-serif;
+    text-shadow: 1px 2px 3px #999;
     margin:3px 0 0 6px;
 }
 
@@ -37,6 +38,7 @@
     box-shadow:rgba(0,0,0,0.15) 0 0 1px;
     color:#444;
     font:normal 12px/14px Arial, Helvetica, Sans-serif;
+    text-shadow: 1px 2px 3px #999;
     margin:0 auto 30px;
 	overflow:hidden;
 }
@@ -48,9 +50,10 @@ td.right{
 td.shstitle{
 	text-align: left;
 	font:normal 18px Arial, Helvetica, Sans-serif;
+	text-shadow: 1px 2px 3px #999;
 	font-size: 30px;
 	font-weight: bold;
-	color: #808080;
+	color: rgb(119,136,153);
 	margin:3px 0 4px;
     padding-bottom: 15px;
     padding-left: 8px;
@@ -69,17 +72,19 @@ td.body{
     box-shadow:rgba(0,0,0,0.15) 0 0 1px;
     color:#444;
     font:normal 12px/14px Arial, Helvetica, Sans-serif;
+    text-shadow: 1px 2px 3px #999;
     margin:0 auto 30px;
 	overflow:hidden;
 }
 
 td.headerB{
-	background:rgb(192,192,192);
+	background:rgba(192,192,192, 0.5);
    -moz-box-shadow:rgba(0,0,0,0.15) 0 0 1px;
     -webkit-box-shadow:rgba(0,0,0,0.15) 0 0 1px;
     box-shadow:rgba(0,0,0,0.15) 0 0 1px;
-    color: rgba(255,0,0, 0.7);
+    color: rgb(119,136,153);
     font:bold 14px Arial, Helvetica, Sans-serif;
+   	text-shadow: 1px 2px 3px #999;
     margin:0 auto 30px;
 	overflow:hidden;
 }
@@ -91,6 +96,7 @@ td.headerA{
     box-shadow:rgba(0,0,0,0.15) 0 0 1px;
     color:white;
     font:bold 18px Arial, Helvetica, Sans-serif;
+    text-shadow: 1px 2px 3px #999;
     margin:0 auto 30px;
 	overflow:hidden;
 }
