--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
@@ -118,16 +118,20 @@ td.console{
 }
 
 div.popup{
-	border: solid 2px;
-	border-top-left-radius: 10px 10px;
-	border-bottom-right-radius: 10px 10px;
+	border-style: solid;
+	border-color:rgb(65,105,225);
+	background:#eff3f6;
+    color:black;
+    font:normal 12px/14px Verdana, Tahomma, Geneva;
+    margin:0 auto 30px;
+	overflow:hidden;
 	position: relative;
 	display: none;
 	resize:both; 
 }
 
 body{
-	margin-top: 49px;
+	margin-top: 50px;
 	background: #778899;
 	
 }
