--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
@@ -20,12 +20,12 @@
     -webkit-box-shadow:2px 3px 3px rgba(0, 0, 0, 0.06) inset, 0 0 1px #95a2a7 inset;
     box-shadow:2px 3px 3px rgba(0, 0, 0, 0.06) inset, 0 0 1px #95a2a7 inset;
     margin:-3px 3px 0px 4px;
-    width:355px;
+    /*width:355px; Das passiert automatisch*/
     display:block;
 }
 
 .loginDiv {
-	width: 600px;
+	width: 400px;
 	 background:#eff3f6;
     border: 1px solid #C3D4DB;
 	border-top:1px;
@@ -115,9 +115,9 @@ div.popup{
 	border: solid 2px;
 	border-top-left-radius: 10px 10px;
 	border-bottom-right-radius: 10px 10px;
-	position: relative;
+	position: absolute;
 	display: none;
-	resize:both; 
+	resize: both; 
 }
 
 body{
@@ -126,13 +126,14 @@ body{
 	
 }
 
+
 #controllboard {
 	background: white;
 }
 
 
 .main {
-	width: 700px;
+	/*width: 700px; Das braucht man ebenfalls nicht*/
 	 background:white;
     border: 1px solid #C3D4DB;
 	border-top:1px;
