--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/tags.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/tags.css
@@ -1,16 +1,9 @@
-@Engin, Ehsan, Stella
-
-<<<<<<< .mine
 
 
-
-
-=======
 div[id="shsbody"]{
 	background-color: #808080; /*dark gray*/
 	width:100%;	
 }
->>>>>>> .theirs
 
 select,input[type="text"],input[type="password"]{
 	background-color: #white; /*silver like*/
@@ -36,6 +29,10 @@ input[type="button"], input[type="submit"], input[type="reset"] {
     margin-left:12px;
     float:right;
 	padding:7px 21px;
+}
+
+input[id="username"],input[id="password"]{
+	background-color: lightgray;
 }
 
 input[type="buttonMain"] {/*Engin: was ist buttonmain??????*/
@@ -80,4 +77,15 @@ div{
 table{
 	width: 100%;
 	/*height: 100%;*/
+}
+
+ul{
+	background-image: url("../images/folder");
+	background-repeat: no-repeat;
+    background-position: 50% 10px;
+}
+
+li{
+	background-image: url('../images/file');
+	
 }
