--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/tags.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/tags.css
@@ -7,6 +7,7 @@ div[id="shsbody"]{
 
 select,input[type="text"],input[type="password"]{
 	background-color: #white; /*silver like*/
+	width: 310px;
 }
 
 input[type="button"], input[type="submit"], input[type="reset"] {
@@ -20,7 +21,7 @@ input[type="button"], input[type="submit"], input[type="reset"] {
     border:1px solid #7db0cc !important;
     cursor: pointer;
     padding:11px 16px;
-    font:bold 11px/14px Verdana, Tahomma, Geneva;
+    font:bold 8px Verdana, Tahomma, Geneva;
     text-shadow:rgba(0,0,0,0.2) 0 1px 0px; 
     color:#fff;
     -moz-box-shadow:inset rgba(255,255,255,0.6) 0 1px 1px, rgba(0,0,0,0.1) 0 1px 1px;
