--- a/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
+++ b/entwicklung/workspace/SherlockHolmesSystems/srcWEB/VIEW/css/classes.css
@@ -136,7 +136,7 @@ div.popup{
     font:normal 12px/14px Verdana, Tahomma, Geneva;
     margin:0 auto 30px;
 	overflow:hidden;
-	position: relative;
+	position: absolute;
 	display: none;
 	resize: both; 
 }
